# sdl_spine_demo

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  download_dependencies.sh  draw_arrays.patch
data/: coin-pma.atlas  coin-pro.json  goblins-pma.atlas  goblins-pro.json  owl-pma.atlas  owl-pro.json  raptor-pro.json  spineboy-pma.atlas  spineboy-pro.json  stretchyman-pma.atlas  stretchyman-pro.json  tank-pma.atlas  tank-pro.json  vine-pma.atlas  vine-pro.json
demo/: CMakeLists.txt  main.cpp  sdl_spine.cpp  sdl_spine.h
